# fastapi-starter

./: .dockerignore  .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  README.md  bumpver.toml  manage.sh  pyproject.toml
.devcontainer/: .env  Dockerfile  devcontainer.json  docker-compose.deps.yml  docker-compose.grafana.yml  docker-compose.otel.yml  docker-compose.yml  docker-reset.sh
.devcontainer/conf/: otel-collector-config.yml  start.sh
.devcontainer/conf/grafana/: alert-rules.yml  loki-config.yml  prometheus-config.yml  tempo-config.yml
.devcontainer/conf/grafana/dashboards/: app-observability.json  default-dashboard.json  fastapi-observability.yml
.devcontainer/conf/grafana/datasources/: loki.yml  tempo.yml
.devcontainer/conf/grafana/provisioning/dashboards/: app-observability.yml  default.yml  fastapi-observability.yml
.devcontainer/conf/grafana/provisioning/datasources/: grafana.yml  loki.yml  prometheus.yml  tempo.yml
.devcontainer/conf/otel/: jaeger-config.yaml  loki-config.yml  otel-collector-config.yml  prometheus.yml  promtail-config.yml  tempo-config.yml
.devcontainer/conf/otel/grafana/dashboards/: fastapi-dashboard.json
.devcontainer/conf/otel/grafana/datasources/: datasource.yml
app/: main.py
app/api/: __init__.py
app/api/v1/: __init__.py  auth.py  clients.py  health.py  metrics.py  obs.py  router.py  scopes.py
app/common/: base_handler.py  base_request.py  base_response.py  base_schemas.py  constants.py  utils.py
app/common/errors/: __init__.py  error_response.py  errors.py  exception_handlers.py
app/common/logging/: __init__.py  logger.py  parseable_sink.py
app/common/middlewares/: __init__.py  error_middleware.py  idempotency_middleware.py  logging_middleware.py  request_logging_middleware.py  tracing_middleware.py
app/common/request_logs/tasks/: request_log_cleanup_task.py  request_log_create_task.py
app/common/tasks/request_logs/tasks/: request_log_cleanup_task.py  request_log_create_task.py
app/core/: application.py  config.py  constants.py  container.py  logging.py  paths.py  utils.py
app/core/config/: __init__.py  api_config.py  cloud_config.py  config.py  database_config.py  idempotency_config.py  jwt_config.py  logging_config.py  otel_config.py  parseable_config.py  request_logging_config.py  task_logging_config.py  taskiq_config.py
app/core/configs/: __init__.py  api.py  database.py  log.py  observability.py
app/core/errors/: errors.py  exception_handlers.py  exceptions.py
app/core/logging/: logger.py  parseable_sink.py
app/domain/common/: __init__.py  base_handler.py  base_request.py  base_response.py
app/domain/common/middleware/: prometheus_middleware.py
app/domain/common/middlewares/: request_middleware.py
app/domain/common/utils/: __init__.py  context.py  datetime.py  int.py  ip.py  prisma.py  sanitization.py  string.py
app/domain/v1/: request_handler_map.py
app/domain/v1/auth/: dependencies.py  scopes.py
app/domain/v1/auth/handlers/: __init__.py  access_token_create_handler.py  access_token_refresh_handler.py  authenticated_client_find_handler.py  client_create_handler.py  client_find_authenticated_handler.py  scope_find_handler.py
app/domain/v1/auth/requests/: __init__.py  access_token_create_request.py  access_token_refresh_request.py  authenticated_client_find_request.py  client_create_request.py  client_find_authenticated_request.py  scope_find_request.py
app/domain/v1/auth/responses/: __init__.py  access_token_create_response.py  access_token_refresh_response.py  authenticated_client_find_response.py  client_create_response.py  client_find_authenticated_response.py  scope_find_response.py
app/infrastructure/celery/: app.py  base_task.py  beat.py  flower.py  worker.py
app/infrastructure/database/: __init__.py  db.py  schema.prisma
app/infrastructure/observability/: __init__.py  bootstrap.py  context.py  instrumentation.py  logger.py  metrics.py  metrics_aggregator.py  prisma_instrumentation.py  setup.py  tracing.py
app/infrastructure/taskiq/: base_task.py  broker.py  config.py  exceptions.py  idempotent_task.py  init_task.py  scheduler.py  schemas.py  task_manager.py  utils.py  worker.py
app/infrastructure/taskiq/broker/: broker.py  broker_factory.py
app/infrastructure/taskiq/examples/: example_tasks.py
app/infrastructure/taskiq/middlewares/: __init__.py  consolidated_middleware.py  error_handling_middleware.py  error_middleware.py  logging_middleware.py  task_logging_middleware.py  tracing_middleware.py
app/infrastructure/taskiq/mixins/: otel_mixin.py
app/services/: __init__.py  jwt_service.py
tests/: .env.test  conftest.py  test_example.py  utils.py
tests/fixtures/: taskiq_fixtures.py
tests/infrastructure/database/: test_db.py
tests/infrastructure/taskiq/: test_task_manager.py
tests/infrastructure/taskiq/broker/: test_broker_factory.py
tests/integration/api/: test_health_endpoint.py
tests/integration/common/: test_middleware_integration.py  test_request_logging_middleware_integration.py
tests/integration/taskiq/: test_broker_integration.py
tests/unit/api/: test_request_middleware.py
tests/unit/common/: test_base_handler.py  test_base_schemas.py  test_utils.py
tests/unit/common/errors/: test_error_responses.py  test_exception_handlers.py  test_exceptions.py
tests/unit/common/log/: test_logger.py  test_parseable_sink.py
tests/unit/common/middleware/: test_error_middleware.py  test_logging_middleware.py  test_tracing_middleware.py
tests/unit/common/middlewares/: test_error_middleware.py  test_logging_middleware.py  test_request_logging_middleware.py  test_tracing_middleware.py
tests/unit/core/: test_application.py  test_config.py  test_utils.py
tests/unit/core/errors/: test_exceptions.py
tests/unit/core/log/: test_parseable_sink.py
tests/unit/domain/: test_health.py
tests/unit/domain/common/: test_base_handler.py
tests/unit/infrastructure/celery/: test_base_task.py
tests/unit/infrastructure/taskiq/: test_config.py  test_task_manager.py
tests/unit/services/: test_jwt_service.py
(+91 files in other folders)
