[tool.poetry]
name = "fastapi_starter"
version = "0.0.0"
description = "FastAPI skeleton for rapid development and deployment of future projects"
authors = ["Jean Dormehl <jean.dormehl@qlink.co.za>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
asyncio = "^3.4.3"
bcrypt = "^4.3.0"
fastapi = {extras = ["all"], version = "^0.115.12"}
httpx = "^0.28.1"
kink = "^0.8.1"
loguru = "^0.7.3"
prisma = "^0.15.0"
psutil = "^7.0.0"
pydantic = {extras = ["dotenv", "emails"], version = "^2.11.4"}
pydantic-settings = "^2.9.1"
pydiator-core = "^1.0.12"
pyjwt = "^2.10.1"
python = "^3.13.3"
redis = "<6.0.0"
taskiq = {extras = ["reload"], version = "^0.11.17"}
taskiq-aio-pika = "^0.4.2"
taskiq-redis = "^1.0.8"
typer = "^0.15.4"
websockets = "^15.0.1"

[tool.poetry.group.dev.dependencies]
autoflake = "^2.3.1"
bandit = "^1.8.3"
bumpver = "^2024.1130"
celery-stubs = "^0.1.3"
coverage = {extras = ["toml"], version = "^7.8.1"}
fakeredis = "^2.29.0"
pytest = "^8.3.5"
pytest-asyncio = "^0.26.0"
pytest-cov = "^5.0.0"
pytest-html = "^4.1.1"
pytest-httpx = "^0.35.0"
pytest-mock = "^3.12.0"
pytest-xdist = "^3.7.0"
ruff = "^0.11.10"
types-redis = "^4.6.0.20241004"
pre-commit = "^4.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
exclude = [
  ".git",
  "__pycache__",
  ".mypy_cache",
  ".pytest_cache",
  "build",
  "dist",
  "docs",
  "generated",
  "migrations",
  "venv"
]
line-length = 88
target-version = "py313"

[tool.ruff.lint]
select = [
  "A",     # Built-in exceptions
  "ANN",   # flake8-annotations (type annotation checks)
  "ARG",   # Unused arguments
  "ASYNC", # Async
  "B",     # Bugbear
  "C4",    # Comprehensions
  "DTZ",   # DateTime zones
  "E",     # Pycodestyle errors
  "EM",    # Error messages
  "F",     # Pyflakes
  "I",     # Import order
  "ICN",   # Import conventions
  "N",     # pep8-naming (naming conventions)
  "PGH",   # PEP 8 naming
  "PL",    # Pylint
  "PT",    # Pytest style
  "RET",   # Returns
  "RUF",   # Ruff-specific
  "SIM",   # Simplifications
  "TCH",   # Type checking
  "UP",    # Pyupgrade
  "W",     # Pycodestyle (warnings, e.g., whitespace)
]
ignore = [
  "ANN401", # Any
  "B008",   # Depends for FastAPI
  "B904",   # Allow raising without from
  "PLR2004",# Magic value comparison
  "PLR0913",# Too many arguments
]
unfixable = ["B904", "DTZ005"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["ANN", "S101"]

[tool.bandit]
targets = [
  "app/",       # Assuming your FastAPI application code is in an 'app' directory
  "main.py",    # If your main FastAPI app is in a single file
]
exclude_dirs = [
  ".venv/",
  "venv/",
  "tests/",    # Usually, you don't need to security scan your test code
  "__pycache__/",
  "docs/",
  "node_modules/",
  "migrations/", # If not using alembic but have a migrations folder
]
confidence_level = "MEDIUM"
severity_level = "MEDIUM"

[tool.pytest.ini_options]
minversion = "6.0"
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
addopts = [
    "-ra",
    "-q",
    "--strict-markers",
    "--disable-warnings",
    "--maxfail=10",
    "--tb=short",
    "-v",
]
testpaths = [
    "tests",
]
python_files = [
    "test_*.py",
]
python_classes = [
    "Test*",
]
python_functions = [
    "test_*",
]
markers = [
    "unit: Unit tests for individual components",
    "integration: Integration tests for component interactions",
    "slow: Tests that take longer than 1 second",
    "database: Tests requiring database interactions",
    "auth: Authentication and authorization tests",
    "tasks: Taskiq background task tests",
    "api: API endpoint tests",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
    "ignore::UserWarning",
    "ignore:.*:pytest.PytestUnraisableExceptionWarning",
]

[tool.coverage.run]
source = ["app"]
omit = [
  "*/__init__.py",
  "*/migrations/*",
  "app/core/container.py",
  "app/domain/v1/request_handler_map.py",
  "app/infrastructure/taskiq/examples/example_tasks.py",
  "app/infrastructure/taskiq/scheduler.py",
  "app/infrastructure/taskiq/worker.py",
  "app/main.py",
  "tests/*"
]
branch = true

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "def __repr__",
  "raise AssertionError",
  "raise NotImplementedError",
  "if __name__ == .__main__.:"
]
show_missing = true
fail_under = 80
